# Advent-of-Code-2021

./: Advent-of-Code2021.cabal  hie.yaml  shell.nix
app/: Main.hs
src/: Common.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Parser.hs
src/Linear/: Compat.hs
