cabal-version:       3.0

name:                aoc
version:             0.1.0.0
build-type:          Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    PartialTypeSignatures

  ghc-options:
    -fplugin=RecordDotPreprocessor

common deps
  build-depends:
    , aeson
    , base                     >=4.9 && <5.5
    , record-dot-preprocessor
    , record-hasfield
    , bits
    , bytestring
    , prettyprinter
    , prettyprinter-ansi-terminal
    , fgl
    , containers
    , graphviz
    , mtl
    , transformers
    , data-default
    , megaparsec
    , text


library
  import:              lang
  import:              deps

  hs-source-dirs: ./src
  exposed-modules:
    Day02
  default-language:    Haskell2010
  other-modules:
    Parser
